Added serverless support

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.2.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "local": "export ENV=staging && npx serverless offline start"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -23,9 +24,11 @@
     "passport-unique-token": "^3.0.0",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.3.5",
+    "serverless-http": "^3.0.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "serverless-offline": "^9.2.2"
   }
 }
