--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "scripts": {
     "dev": "nodemon ./bin/www",
     "local": "export ENV=staging && npx serverless offline start",
+    "offline": "serverless offline",
     "deploy": "serverless deploy --verbose",
-    "deploy:fast": "serverless deploy function --function api",
+    "deploy:changes": "npm run deploy:func",
+    "deploy:func": "serverless deploy function --function api",
     "deploy:live": "serverless deploy --stage production --region us-west-2",
     "upload:fast": "serverless deploy --aws-s3-accelerate"
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
